--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
-		<title>Global Volcanoes</title>
+		<title>Boston SceneView</title>
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="https://js.arcgis.com/4.22/esri/themes/light/main.css" />
 		<script src="https://js.arcgis.com/4.22/"></script>
@@ -10,6 +10,9 @@
 
 	<body>
 		<div id="viewDiv"></div>
+		<button id="b1" class="off">Seaport District</button>
+		<button id="b2" class="off">Dorcester</button>
+		<button id="b3" class="off">Downtown</button>
 		<script src="script.js"></script>
 	</body>
 </html>
